[package]
name = "block"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.0"
elliptic-curve = "0.13.8"
k256 = { version = "0.13.3", features = ["serde"] }
rand_core = "0.6.4"
ripemd = "0.1.3"
serde = { version = "1.0.195", features = ["derive"] }
serde-big-array = "0.5.1"
sha2 = "0.10.8"
toml = "0.8.8"
