[package]
name = "block"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.0"
elliptic-curve = "0.13.8"
k256 = { version = "0.13.3", features = ["serde"] }
prost = "0.12.3"
rand_core = "0.6.4"
regex = "1.10.3"
ripemd = "0.1.3"
serde = { version = "1.0.195", features = ["derive"] }
serde-big-array = "0.5.1"
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.8"
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
